# NeuralDBG

./: .augment_pytest_report.xml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  AGENTS.md  API_REMOVAL_SUMMARY.md  API_STABILITY_v1.0.md  AQUARIUM_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  AUTOMATION_GUIDE.md  BUG_FIXES_COMPLETE.md  BUG_FIXES_SUMMARY.md  CACHE_CLEANUP_SUMMARY.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLEANUP_CHECKLIST.md  CLEANUP_IMPLEMENTATION.md  CLEANUP_MIGRATION_GUIDE.md  CLEANUP_QUICK_REF.md  CLEANUP_QUICK_REFERENCE.md  CLEANUP_README.md  CLEANUP_SUMMARY.md  CLI_CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETE_CLEANUP_INSTRUCTIONS.md  CONTRIBUTING.md  COST_OPTIMIZATION_IMPLEMENTATION.md  DEPENDENCY_FIX_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_FEATURES.md  DEPLOYMENT_FILES.md  DEPLOYMENT_SUMMARY.md  DISTRIBUTION_JOURNAL.md  DOCKER_QUICKSTART.md  DOCS_CLEANUP_GUIDE.md  DOCS_CLEANUP_QUICK_REF.md  DOCS_CLEANUP_SUMMARY.md  (+126 more)
.git.bak/: packed-refs
.github/: SECURITY_BADGES.md  SECURITY_CHECKLIST.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_QUICK_REF.md  WORKFLOW_CONSOLIDATION.md
Aquarium/: README.md
deployment/: README.md
dockerfiles/: Dockerfile.api  Dockerfile.aquarium  Dockerfile.worker  README.md
docs/: API_REMOVAL.md  ARCHITECTURE.md  CONFIGURATION_VALIDATION.md  CONSOLIDATION_SUMMARY.md  COST_OPTIMIZATION.md  DEPLOYMENT_QUICK_START.md  DEPRECATIONS.md  DOCUMENTATION_INDEX.md  EXPERIMENT_TRACKING_GUIDE.md  FOCUS.md  INTEGRATIONS.md  PERFORMANCE.md  POST_RELEASE_AUTOMATION.md  PROFILING_GUIDE.md  README.md  README_CLEANUP.md  RELEASE_QUICK_START.md  RELEASE_WORKFLOW.md  SECURITY_SETUP.md  TEAMS_MODULE_REMOVAL.md  TRANSFORMER_DOCS_SUMMARY.md  TYPE_SAFETY.md  Tensor_Flow_Visualization.md  ai_integration_guide.md  cheatsheet.md  cli.md  cli_reference.md  deployment.md  dsl.md  examples_guide.md  index.html  installation.md  migration.md  positional_encoding.md  quickstart.md  transformer_architecture.md  transformer_attention.md  transformer_migration.md  transformer_training.md  transformers_README.md  (+1 more)
examples/: EXAMPLES_INDEX.md  EXAMPLES_QUICK_REF.md  Examples  IMPLEMENTATION_SUMMARY.md  README.md  README_MULTIHEADATTENTION.md  TRANSFORMER_EXAMPLES.md  advanced_hpo_v0.2.5.neural  advanced_hpo_v0.2.7.neural  bert_encoder.neural  comparative_profiling_example.py  dashboard_enhanced_usage.py  deployment_example.py  distributed_profiling_example.py  edge_deployment_example.py  encoder_decoder_transformer.neural  experiment_tracking_example.py  export_demo.neural  gpt_decoder.neural  gpu_profiling_example.py  layer_multiplication.neural  macros.neural  marketplace_demo.py  mnist.neural  mnist_2.neural  mnist_commented.neural  mnist_hpo.neural  multihead_attention.neural  nested_layers.neural  neural_dsl_profiling_integration.py  performance_demo.py  (+10 more)
(+800 files in other folders)
