[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Note: We keep setup.py as the source of truth for metadata (including version 0.3.0.dev0).
# Moving to PEP 621 ([project]) can be done later; for now, this provides modern build isolation.


[tool.ruff]
line-length = 100
src = ["neural", "tests"]
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "neural/src",
]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["neural", "pretrained_models"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2
force-single-line = false
force-sort-within-sections = true
order-by-type = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.venv312
  | build
  | dist
  | neural/src
)/
'''

